@@ -69,7 +69,8 @@ WHAT IS NEW?
       "set left padding", "get left padding", "set right padding",
       "get right padding", "set bottom padding", "get bottom padding",
       "fill parent", "is filling parent", "last child", "slice to back",
-      "slice to front", "Y sort children" [James]
+      "slice to front", "Y sort children", "set sort order",
+      "sort children" [James]
     * "number from string" [James]
 
   * Vikings of Midgard
